# dns

./: .gitignore  Cargo.toml  LICENSE  fetch-iana.sh  get-hints.sh  get-port-assignments.sh
async-lib/: Cargo.toml
async-lib/benches/: awake_token_benchmark.rs
async-lib/src/: arc.rs  awake_token.rs  lib.rs  once_watch.rs  shared_awake_token.rs
dns-cache/: Cargo.toml
dns-cache/src/: cached_record.rs  lib.rs
dns-cache/src/asynchronous/: async_cache.rs  async_main_cache.rs  async_transaction_cache.rs  async_tree_cache.rs  mod.rs
dns-cache/src/synchronous/: cache.rs  main_cache.rs  mod.rs  transaction_cache.rs  tree_cache.rs
dns-cache/src/types/: ascii.rs
dns-client/: Cargo.toml
dns-client/src/: lib.rs  qname_minimizer.rs  result.rs  tcp_manager.rs  udp_handler.rs
dns-client/src/network/: async_query.rs  errors.rs  mixed_tcp_udp.rs  mod.rs  quic.rs  receive.rs  rolling_average.rs  socket_manager.rs  tls.rs
dns-client/src/network/socket/: mod.rs  quic.rs  tcp.rs  tls.rs  udp.rs  udp_tcp.rs
dns-client/src/query/: mod.rs  network_query.rs  recursive_query.rs  round_robin_query.rs
dns-experimental/: Cargo.toml
dns-experimental/src/: main.rs
dns-lib/: Cargo.toml  port-assignments.xml
dns-lib/src/: gen_enum.rs  lib.rs  macros.rs
dns-lib/src/interface/: client.rs  mod.rs
dns-lib/src/interface/cache/: cache.rs  main_cache.rs  meta_cache.rs  mod.rs  transaction_cache.rs
dns-lib/src/query/: message.rs  mod.rs  qr.rs  question.rs
dns-lib/src/resource_record/: address_family.rs  digest_alg.rs  dnssec_alg.rs  gen_enum.rs  ipsec_alg.rs  key_protocol.rs  mod.rs  opcode.rs  port_from_service.rs  ports.rs  protocol.rs  rclass.rs  rcode.rs  resource_record.rs  rrset.rs  rtype.rs  time.rs
dns-lib/src/resource_record/types/: a.rs  a6.rs  aaaa.rs  afsdb.rs  amtrelay.rs  any.rs  apl.rs  axfr.rs  caa.rs  cdnskey.rs  cds.rs  cert.rs  cname.rs  csync.rs  dname.rs  dnskey.rs  ds.rs  eui48.rs  eui64.rs  hinfo.rs  maila.rs  mailb.rs  mb.rs  md.rs  mf.rs  mg.rs  minfo.rs  mod.rs  mr.rs  mx.rs  naptr.rs  ns.rs  nsec.rs  null.rs  ptr.rs  rrsig.rs  soa.rs  srv.rs  tlsa.rs  tsig.rs  (+2 more)
dns-lib/src/serde/: const_byte_counts.rs  mod.rs
dns-lib/src/serde/presentation/: errors.rs  from_presentation.rs  from_tokenized_rdata.rs  from_tokenized_record.rs  mod.rs  read_resource_records.rs  test_from_presentation.rs  test_from_tokenized_rdata.rs  test_from_tokenized_record.rs  to_presentation.rs  to_tokenized_rdata.rs  to_tokenized_record.rs  tokenizer.rs  zone_file_reader.rs
dns-lib/src/serde/presentation/parse_chars/: char_token.rs  escaped_to_escapable.rs  mod.rs  non_escaped_to_escaped.rs
dns-lib/src/serde/presentation/tokenizer/: entry.rs  entry_text_tokens.rs  errors.rs  mod.rs  raw_entries.rs  raw_literals.rs  regex.rs  text_tokens.rs  token_entries.rs  tokenizer.rs
dns-lib/src/serde/wire/: bytes.rs  circular_test.rs  compression_map.rs  from_wire.rs  from_wire_tests.rs  mod.rs  read_wire.rs  to_wire.rs  to_wire_tests.rs  write_wire.rs
dns-lib/src/types/: ascii.rs  base16.rs  base32.rs  base64.rs  base_conversions.rs  c_domain_name.rs  character_string.rs  domain_name.rs  extended_base32.rs  label.rs  mod.rs  rtype_bitmap.rs
dns-lib/src/types/domain_name/: raw.rs  vec.rs
dns-lib/src/types/parse_chars/: mod.rs  to_escapable_char.rs  to_escaped_char.rs
dns-macros/: Cargo.toml
dns-macros/src/: from_tokenized_rdata.rs  from_tokenized_record.rs  from_wire.rs  lib.rs  rdata.rs  rtype_code.rs  to_presentation.rs  to_wire.rs
dns-server/: Cargo.toml
network/: Cargo.toml
network/src/: async_query.rs  cancel.rs  errors.rs  lib.rs  mixed_tcp_udp.rs  quic.rs  receive.rs  rolling_average.rs  socket_manager.rs  tls.rs
network/src/socket/: mod.rs  quic.rs  tcp.rs  tls.rs  udp.rs  udp_tcp.rs
port-assignments/: .gitignore  README  generate-port_from_service.sh  get-port-assignments.sh  port-assignments-to-rust-match.py
static-assertions/: Cargo.toml
static-assertions/src/: lib.rs
