[package]
name = "async-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
static-assertions = { path = "../static-assertions" }

pin-project = "1.1"
tokio = { version = "1.45", features = ["full"] }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"

[[bench]]
name = "awake_token_benchmark"
harness = false
