[package]
name = "dns-cache"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lib = { path = "../dns-lib" }

async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.45", features = ["full"] }
ux = "0.1"
