[package]
name = "dns-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lib = { path = "../async-lib" }
dns-lib = { path = "../dns-lib" }
dns-cache = { path = "../dns-cache" }
network = { path = "../network" }

async-recursion = "1.1"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
tokio = { version = "1.39", features = ["full"] }
ux = "0.1"
