[package]
name = "dns-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-macros = {path="../dns-macros"}

async-trait = "0.1"
lazy_static = "1.4"
mac_address = "1.1"
rand = "0.8"
regex = "1.10"
tokio = { version = "1.35", features = ["full"] }
ux = "0.1"

[dev-dependencies]
num-bigint = "0.4"
