[package]
name = "dns-lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-macros = {path="../dns-macros"}

async-trait = "0.1"
futures = "0.3"
lazy_static = "1.5"
mac_address = "1.1"
regex = "1.11"
tinyvec = { version = "1.9", features = ["alloc"] }
tokio = { version = "1.45", features = ["full"] }
ux = "0.1"
xml = "0.8"

[dev-dependencies]
num-bigint = "0.4"
