[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lib = { path = "../async-lib" }
dns-lib = { path = "../dns-lib" }

async-recursion = "1.1"
async-trait = "0.1"
lazy_static = "1.5"
quinn = "0.11"
rand = "0.8"
socket2 = "0.5"
tokio = { version = "1.39", features = ["full"] }
