[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lib = { path = "../async-lib" }
dns-lib = { path = "../dns-lib" }

async-recursion = "1.1"
async-trait = "0.1"
atomic = { version = "0.6", features = ["std"] }
bytemuck = { version = "1.19", features = ["derive"]}
futures = "0.3"
lazy_static = "1.5"
log = { version = "0.4", features = ["std", "kv"] }
pin-project = "1.1"
quinn = "0.11"
rand = "0.8"
socket2 = "0.5"
tinyvec = { version = "1.8", features = ["alloc"] }
tokio = { version = "1.41", features = ["full"] }

[dev-dependencies]
ux = "0.1"
